-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6
-
None
-
951a9dab9 (dev), 2200d9250 (6.6)
-
DaVinci 90, DaVinci 91
Since a refactoring related to QTBUG-105754, QDoc no longer parses trailing backslashes immediately preceding a newline character as line continuation character correctly, and duplicates content in the continued line. The refactoring caused another side effect, reported as a bug in QTBUG-114937. The fix for that issue introduced a new side effect that may cause leading and trailing whitespace characters in a continued line to end up verbatim in the continued line.
- blocks
-
QTBUG-117912 QDoc: Implement COMMAND_COMPARISON
-
- Closed
-
-
QTBUG-117913 QDoc: Implement COMMAND_COMPARES
-
- Closed
-
- resulted from
-
QTBUG-114937 Space in \printuntil regex needs to be protected
-
- Closed
-
-
QTBUG-105754 QDoc's \sa command doesn't respect QDoc's //! comments
-
- Closed
-
- resulted in
-
QTBUG-119610 QDoc: DocParser::getRestOfLine() doesn't chop trailing backslash on Windows
-
- Reported
-
| For Gerrit Dashboard: QTBUG-118558 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 514127,5 | QDoc: Respect line continuation characters | dev | qt/qttools | Status: MERGED | +2 | 0 |
| 515647,4 | QDoc: Respect line continuation characters | 6.6 | qt/qttools | Status: MERGED | +2 | 0 |