src/qdoc/qdoc/tests/generatedoutput/testdata/trailing_backslashes/trailing_backslashes.cpp
@@ -1,0 +1,32 @@
+// Copyright (C) 2023 The Qt Company Ltd.
+// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GFDL-1.3-no-invariants-only
+
+/*!
+    \struct Struct
+*/
+
+/*!
+    \fn void Struct::oneTrailingSlash()
+    \keyword one \
+    slash
+
+    \sa {two slashes again}
+*/
+
+/*!
+    \fn void Struct::MultipleTrailingSlashes()
+    \keyword two \
+             slashes \
+             here
+
+    \sa {one slash}
+*/
+
+/*!
+    \fn void Struct::multipleTrailingSlashesAndRandomWhitespace()
+    \keyword   two\
+    slashes \
+    again
+
+    \sa {two slashes here}
+*/
