tests/auto/qdoc/generatedoutput/testdata/trailing_backslashes/trailing_backslashes.h
@@ -1,0 +1,14 @@
+// Copyright (C) 2023 The Qt Company Ltd.
+// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GFDL-1.3-no-invariants-only
+
+#ifndef TRAILING_BACKSLASHES_H
+#define TRAILING_BACKSLASHES_H
+
+struct Struct
+{
+    void oneTrailingSlash(){};
+    void MultipleTrailingSlashes(){};
+    void multipleTrailingSlashesAndRandomWhitespace(){};
+};
+
+#endif // TRAILING_BACKSLASHES_H
